--- a/doc/D51/D51_Sapienza.tex
+++ b/doc/D51/D51_Sapienza.tex
@@ -70,9 +70,10 @@
 
 \title{D5.1\\ Definition of internal architecture and interface between software modules}
 
-\author{Domenico D. Bloisi, Fabio Maria Carlucci, Luca Iocchi, Daniele Nardi\\
-Dept. of Computer, Control and Management Engineering\\
-Sapienza University of Rome, Italy}
+\author{Domenico D. Bloisi, Fabio Maria Carlucci, Luca Iocchi, and Daniele Nardi\\
+\textit{Dept. of Computer, Control and Management Engineering\\
+Sapienza University of Rome\\
+via Ariosto, 25 00185 Rome, Italy}}
 
 
 %\nb{of the kickoff meeting, $27^{th},28^{th}$ October }
@@ -89,7 +90,7 @@ Sapienza University of Rome, Italy}
 This document describes the software architecture of the entire project, showing the main software components, their connections and the interfaces between them.
 \end{abstract}
 
-\vspace*{4.0cm}
+\vspace*{2.0cm}
 
 \fbox{
 \begin{minipage}{1.0\textwidth}
@@ -109,31 +110,36 @@ The copyright in this document is the property of the COACHES Consortium. This d
 
 \section{Introduction}
 
-In this document we describe the software architecture of the COACHES project.
+In this document the software architecture developed within the
+context of the COACHES project is described.
 
-We describe our choice regarding the middleware chosen to implement the entire system.  Moreover,  we  precisely  define  the  interface 
-between  each  pair  of  modules  connected by  a  flow  of  information  as  depicted  in 
-Figure \ref{fig:swarch}. 
+Design solutions regarding the middleware chosen for implementing the entire system are discussed.  Moreover,  a  precise  definition of the  interface 
+between  each  pair  of  modules  connected by  a  flow  of  information (as shown in
+Fig. \ref{fig:swarch}) is provided. 
 Subsequent implementation of the software components during the project will follow  these  specifications,  thus  simplifying  their  integration  in  the demonstrators. 
 
-We will use an open architecture (hard/soft) and standard technologies available (such 
-as ROS for integrating robotic modules and DDS for communication) so that it will be 
+An open architecture (hard/soft) and standard technologies available (such 
+as ROS for integrating robotic modules and DDS for communication) will be used,
+so that it will be 
 easy to extend and/or adapt the capabilities of the system during the whole length of 
 the  project  (especially  to  integrate  and  test  various  algorithms  and/or  sensors).  Such 
 an open architecture will also simplify and optimize integration efficiency as well as re-use of assets in other projects or products. 
 
-In the following of this document, we will first describe the choice of the middleware, then the main software components and the  set-up of a 2D simulation environment for testing the developments, finally we describe the version management system that will be used to manage the development.
+The reminder of this document is organized as follows.
+First, the choice of the middleware is discussed, then the main software components and the
+set-up of a 2D simulation environment for testing the developments are described.
+Finally, the version management system that will be used to manage the development is illustrated.
 
 \section{Middleware}
 
-For the development of the software robotics components, we use the Robot Operating System (ROS) (www.ros.org), which is the standard middleware for robotics applications.
-In particular, we will use the last stable version ROS Indigo and the last LTS (Long Term Support) version of the Linux/Ubuntu Operating System.
+For the development of the software robotics components, the Robot Operating System (ROS) (www.ros.org), which is the standard middleware for robotics applications, has been selected.
+In particular, the last stable version ROS Indigo and the last LTS (Long Term Support) version of the Linux/Ubuntu Operating System will be used.
 
 ROS provides the middleware to share information among the many modules implementing various functionalities on each robot. Moreover, an interface (ROS-through-TCP) will be realized in order to share information among the robots and between each robot and other components of the system.
 
 \section{Main software components}
 
-In this section we describe the main robotic software components that will be development for the control, the reasoning and the interaction functionalities of the robot.
+In this section, the main robotic software components that will be development for the control, the reasoning and the interaction functionalities of the robot are described.
 
 \subsection{Robotic software components}
 
