--- a/doc/D52/D52_Sapienza.tex
+++ b/doc/D52/D52_Sapienza.tex
@@ -71,9 +71,10 @@
 
 \title{D5.2\\ Definition of the use cases for the demonstrations}
 
-\author{Domenico D. Bloisi, Fabio Maria Carlucci, Luca Iocchi, Daniele Nardi\\
-Dept. of Computer, Control and Management Engineering\\
-Sapienza University of Rome, Italy}
+\author{Domenico D. Bloisi, Fabio Maria Carlucci, Luca Iocchi, and Daniele Nardi\\
+\textit{Dept. of Computer, Control and Management Engineering\\
+Sapienza University of Rome\\
+via Ariosto, 25 00185 Rome, Italy}}
 
 
 %\nb{of the kickoff meeting, $27^{th},28^{th}$ October }
@@ -90,7 +91,7 @@ Sapienza University of Rome, Italy}
 This document describes the scenario in which the robots will operate and a set of use cases that will be implemented, demonstrated and evaluated.  
 \end{abstract}
 
-\vspace*{4.0cm}
+\vspace*{2.0cm}
 
 \fbox{
 \begin{minipage}{1.0\textwidth}
