--- a/doc/D52/UseCases_Sapienza.tex
+++ b/doc/D52/UseCases_Sapienza.tex
@@ -1,11 +1,50 @@
 \section{Introduction}
 
-The COACHES project aims at developing a prototype robotic system for user assistance in a shopping center. In this document we describe a set of use cases that will be implemented to show the feasibility of the approach and to assess the effectiveness of the proposed solutions with actual users.
+COACHES project aims at developing a prototype robotic system for user assistance in a shopping mall.
+The COACHES robots will use different modalities, i.e., speech and displayed information,
+to interact with the mall visitors, shopkeepers and mall managers.
+The scenario where the COACHES robots and systems will be deployed is provided
+by a mall called ``Rive de l’orne'', located in the city of Caen, France.
 
-More specifically, in this document we describe a set of uses cases that focus on two main components of the entire system: 1) short term human-robot interaction, 2) safe navigation.
+A set of use cases will be implemented to show the feasibility of the approach and to assess the effectiveness of the proposed solutions with actual users.
+In particular, this document contains:
+\begin{enumerate}
+\item A brief description of the test facilities;
+\item A set of uses cases that focus on two main components of the entire system,
+namely short-term human-robot interaction and safe navigation.
+\end{enumerate}
+
+\section{Test facilities: Collaboration with the Mall Rives de l'Orne}
+The test facilities concerns the Mall Rives de l'Orne. Ç Rive de lÕorne È is a new and modern mall at Caen city (France). It is composed of two face-to-face buildings separated by a large main square. At the first floor of the two buildings, there are many shops and restaurants. In the main square, there is a cinema. This space is surrounded by tramway stations and a train station. This mall is visited by more than 100,000 customers every year. In addition to that, several elderly people live in the new apartments at the other floors of the buildings. These people have their habit and there are frequent customers of the mall \ref{mall}. Two meetings have been organized ($23^{th}$ October and $12^{th}$ December 2014)to define the equipments to install in terms of cameras and sensors (RFID) to send some information to robots about shops, the planning of the robot deployment in the mall and some local dissemination actions. A visit of all partners have been organized during the kickoff meeting. 
+
+\begin{figure}[!t]
+\begin{center}
+\includegraphics[width=0.42\linewidth]{InsideRivedelOrne}
+\caption{Inside the mall}
+\label{mall}
+\end{center}
+\end{figure}
+
+\begin{figure}[!t]
+\begin{center}
+\includegraphics[width=0.7\linewidth]{MapsRorne}
+\caption{The map}
+\label{default}
+\end{center}
+\end{figure}
 
 
 \section{Use cases for short-term interaction and navigation}
+
+COACHES project envisages the implementation of a set of use cases
+to show the feasibility of the approach and to assess the effectiveness
+of the proposed solutions with actual users.
+To this end, different use cases will be implemented, focusing on two main
+components of the entire system:
+\begin{enumerate}
+\item Short-term human-robot interaction;
+\item Safe navigation.
+\end{enumerate}
 
 
 \subsection{Customer asks for help carrying his/her bag}
