--- a/doc/D52/D52_Sapienza.tex
+++ b/doc/D52/D52_Sapienza.tex
@@ -12,6 +12,8 @@
 \newsavebox{\notenumber}
 \newsavebox{\notedate}
 
+\usepackage{url}
+
 %\renewcommand{\title}[1]{\sbox{\notetitle}{\Large{\textbf{#1}}}}
 %\renewcommand{\author}[1]{\renewcommand{\and}{\quad}\sbox{\noteauthor}{\large{#1}}}
 \renewcommand{\title}[1]{\sbox{\notetitle}{\begin{minipage}{1.0\textwidth} \begin{center} \Large{\textbf{#1}} \end{center}\end{minipage} }}
